web/src/components/ui/Dialog.module.css
.dialog {
  position: fixed;
  top: 5vw;
  display: flex;
  width: 100%;
  z-index: 1000;
  max-width: 1000px;

  align-items: center;
  align-content: center;
  justify-content: center;
  background: transparent;
  border: none;

  .close-button {
    top: 0;
    position: sticky;
    width: 100%;
    background-color: var(--background);
    padding-top: 1.5rem;
    z-index: 1001;
  }

  h2 {
    text-align: center;
  }
}

.dialog-content {
  max-width: calc(100vw - 10rem);
  max-height: calc(100vh - 10rem);
  padding-inline: 2rem;
  padding-bottom: 2rem;
  border: 1.5px solid #191919;
  border-radius: var(--default-border-radius);
  background: white;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
  overflow-y: auto;
  width: 80%;

  margin: 0;

  h2 {
    margin-bottom: 1rem;
  }

  &::-webkit-scrollbar {
    display: none;
  }
}

.blanket {
  background-color: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(8px);
}

